# lab2embebidos

./: README.md  model.py  model_claude.py  output_editable.docx  output_editable.md  preprocesar_datasets.py  requirements.txt  resize_images_to_96.py  skippoolcnn_tf.py  train_5_topologias.py
Ejercicio2-2/: output_editable.docx  output_editable.md
Ejercicio2-3/: esp32_estimates.csv  memory_and_layer_estimates.csv  output_editable.docx  output_editable.md
Ejercicio2-4/: output_editable.docx  output_editable.md  roofline_layer_labels.csv
dataset_grupo_3_reescalado/celular/: etiquetas.txt
dataset_grupo_3_reescalado/esp/: etiquetas.txt
dataset_grupo_4/esp/: etiquetas.txt
dataset_grupo_4_reescalado/celular/: etiquetas.txt
dataset_grupo_5_reescalado/celular/: etiquetas.txt
dataset_grupo_6/celular/: etiquetas.txt
dataset_grupo_6/esp/: etiquetas.txt
esp_identifier_detection/: CMakeLists.txt  README.md  sdkconfig.defaults
esp_identifier_detection/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cc  camera_provider.cc  camera_provider.h  identifier_detector.cc  identifier_detector.h  identifier_model_data.cc  identifier_model_data.h  idf_component.yml  model_settings.h  static_image_data.cc  static_image_data.h
outputs_quickcheck/: history.csv  summary.csv
outputs_quickcheck/checkpoints/: cnn_small.pt  (+3 more)
outputs_quickcheck2/: history.csv  summary.csv
outputs_quickcheck_flag/: history.csv  summary.csv
outputs_tf/: cnn_skip_pool_tf.keras  cnn_skip_pool_tf_qat.keras  history.csv  report.md  summary.csv
outputs_trainval_check/: history.csv  summary.csv
(+35 files in other folders)
